--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
 <head> 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/> 
     <title>#NotAloneAtXmas UK Map</title> 
-    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=falsekey=<%=@api_key%>"
+    <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=<%=@api_key%>"
             type="text/javascript"></script> 
   </head> 
   <body onunload="GUnload()"> 
