--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8"/> 
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8"/> 
     <title>#NotAloneAtXmas UK Map</title>
     <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=<%=@api_key%>"
-            type="text/javascript"></script> 
+            type="text/javascript"></script>
+    <style type="text/css">body{width:800px;margin:1em auto;font-family:Verdana,Arial,sans serif}h1{text-align:center}</style>
   </head> 
   <body onunload="GUnload()"> 
+    <h1>#NotAloneAtXmas UK Map</h1>
+    <p>To have your tweet appear on the map, tweet your postcode and include the hashtag #NotAloneAtXmas</p>
+    <p>There may be a lag between your post appearing on Twitter and the map updating due to a technical issue with the server. Sorry</p>
     <div id="map_canvas" style="width: 800px; height: 600px"></div> 
-
+    
+    <p>Code <a href="http://github.com/lizconlan/notaloneatxmas">available on Github</a></p>
+    
     <script type="text/javascript"> 
       var geocoder = new GClientGeocoder();
       var map = new GMap2(document.getElementById("map_canvas"));
